--- a/css/style.css
+++ b/css/style.css
@@ -1189,6 +1189,7 @@ font-size:14px;
 	color: #000;
   
 }
+
 .icons ul li a span.fa{
 	 margin:0.5em;
 	font-size:19px;
@@ -1216,6 +1217,14 @@ font-size:14px;
 .icons ul li a span.fa.fa-vk:hover{
 	color: #45668e;
 }
+
+.thanos{
+    width:45px;
+    height: auto;
+    margin: auto;
+    vertical-align: center;
+}
+
 footer {text-align:center;
 	  background:#000;
 	  padding:1em 0;}
