--- a/css/style.css
+++ b/css/style.css
@@ -1225,6 +1225,19 @@ font-size:14px;
     vertical-align: center;
 }
 
+.party{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.partyBack{
+    width: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 footer {text-align:center;
 	  background:#000;
 	  padding:1em 0;}
