--- a/css/style.css
+++ b/css/style.css
@@ -1219,28 +1219,28 @@ font-size:14px;
 }
 
 .thanos{
-    width:45px;
+    width:50%;
     height: auto;
     margin: auto;
     vertical-align: center;
 }
 
 .party{
-    width: 200px;
+    width: 80%;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
 .spidey{
-    width: 100px;
+    width: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
 .partyBack{
-    width: 120px;
+    width: 40%;
     display: block;
     margin-left: auto;
     margin-right: auto;
