--- a/css/style.css
+++ b/css/style.css
@@ -1232,6 +1232,18 @@ font-size:14px;
     margin-right: auto;
 }
 
+.partyRow::after{
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.partyColumn{
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+
 .spidey{
     width: 30%;
     display: block;
